--- a/front/src/components/style.scss
+++ b/front/src/components/style.scss
@@ -1,31 +1,223 @@
+:root{
+    --main-color : rgb(96, 156, 96);
+    --green-700 :  rgb(38, 59, 38);
+    --accent-color : rgb(209, 160, 55);
+}
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
 *{
     font-family: Arial, Helvetica, sans-serif;
-
 }
+
 body {
     margin: 0;
 }
-
-header{
-    border-bottom : 1px solid black;
+@mixin inner-box-shadow {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, 
+}
+ul {
+    margin :0;
+    padding: 0
+}
+header, footer{
+    background-color: var(--main-color);
+    color : white;
     padding : 1rem;
-    text-align: center;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @include inner-box-shadow();
+
     h1{
         font-size: 2rem;
+        font-family: 'Audiowide', cursive;
     }
 }
+header {
+    margin-bottom: 1rem;
+}
+
+main{
+    margin : 0 auto;
+    max-width: 900px;
+}
+footer {
+    margin-top: 1rem;
+    ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        list-style: none;
+    }
+}
+
+h2{
+    font-family: 'Audiowide', cursive;
+    color : var(--green-700)
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+button{
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.main-button{
+    transition : 0.2s;
+    padding :1rem;
+    font-size: 1rem;
+    border : 1px solid transparent;
+    background-color: var(--main-color);
+    color : white;
+    text-transform: uppercase;
+    border-radius: 3px;
+    @include inner-box-shadow();
+    font-family: 'Audiowide', cursive;
+
+    &:hover{
+        background-color: var(--accent-color);
+    }
+}
+
+.icon-button{
+    transition : 0.2s;
+    display: none;
+
+    background-color: var(--main-color);
+    justify-content: center;
+    align-items: center;
+    width: 2rem;
+    height: 2rem;
+    padding: 0.25rem;
+    font-size: 1rem;
+    color : white;
+    border: transparent; 
+    border-radius: 3px;
+
+    &:hover{
+    background-color: var(--accent-color);
+    }
+}
+
 
 .error {
     color : red;
     font-style : italic;
 }
 
-.newPlayerForm{
+.main-action-buttons{
+    display : flex; 
+    flex-direction: row;
+    gap : 1rem;
+    justify-content: center;
+}
+
+.form{
     max-width: 20rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap : 1rem;
 
+    border : 1px solid var(--main-color);
+    border-radius: 5px;
+    padding : 2rem;
 
+    label {
+        &::before{
+            content: "•";
+            color : var(--main-color);
+            margin-right: 1rem;
+            font-size: 1.2rem;
+        }
+    }
+
+    input, select {
+        padding: 0.5rem;
+        background-color: rgb(228, 228, 228);
+        border-radius: 3px;
+        border : transparent
+    }
+}
+
+
+.small-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap : 1rem;
+    
+    border : 1px solid var(--main-color);
+    border-radius: 5px;
+    padding : 1rem 2rem;
+
+    legend {
+        font-family: 'Audiowide', cursive;
+    }
+
+    div{
+        gap : 1rem;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    label{
+        width: 100%;
+    }
+    input, select {
+        width: 100%;
+        padding: 0.5rem;
+        background-color: rgb(228, 228, 228);
+        border-radius: 3px;
+        border : transparent
+    }
+}
+
+.team-data {
+    width: 100%;
+    &:not(:last-child){
+        border-bottom: 1px dashed var(--green-700);
+        margin-bottom: 1rem;
+    }
+}
+.team-header{
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+    align-items: center;
+    
+    &:hover {
+        .icon-button{
+            display: flex;
+        }
+    }
+}
+
+.team-jerseyColor{
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 3px;
+}
+
+.player-header{
+    display: flex;
+    gap : 1rem;
+    align-items: center;
+
+    &:hover {
+        .icon-button{
+            display: flex;
+        }
+    }
 }
