--- a/front/src/assets/style.scss
+++ b/front/src/assets/style.scss
@@ -49,6 +49,9 @@ header {
 main{
     margin : 0 auto;
     max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer {
@@ -57,6 +60,7 @@ footer {
         margin: 0;
         padding: 0;
         display: flex;
+        gap : 1rem;
         flex-direction: column;
         align-items: center;
         list-style: none;
@@ -167,7 +171,8 @@ button{
         padding: 0.5rem;
         background-color: rgb(228, 228, 228);
         border-radius: 3px;
-        border : transparent
+        border : transparent;
+        color : black;
     }
 }
 
