--- a/front/src/assets/style.scss
+++ b/front/src/assets/style.scss
@@ -4,6 +4,7 @@
     --green-500:rgb(72, 109, 72);
     --green-700 :  rgb(38, 59, 38);
     --accent-color : rgb(209, 160, 55);
+    --background-color : #1c1b22;
 }
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
@@ -11,6 +12,7 @@
     font-family: Arial, Helvetica, sans-serif;
     color-scheme: dark;
 }
+
 .app_container{
     min-height: 100vh;
     display: flex;
@@ -44,6 +46,49 @@ header, footer{
 }
 header {
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding : 0 3rem;
+
+    a{
+        text-decoration: none;
+    }
+
+    h1{
+        color : white
+    }
+
+    div{
+        width: 30%;
+    }
+
+    .header-buttons{
+        display: flex;
+        align-items: center;
+        gap : 1rem;   
+
+        a, p{
+            transition : 0.2s;
+            padding :0.5rem;
+            font-size: 0.9rem;
+            border : 1px solid transparent;
+            color : white;
+            text-transform: uppercase;
+            border-radius: 3px;
+            font-family: 'Audiowide', cursive;
+
+            &:hover{
+                cursor: pointer;
+                background-color: var(--accent-color);
+            }
+        }
+
+    }
+    
+    .end {
+        justify-content: flex-end;
+    }
 }
 
 main{
@@ -108,6 +153,7 @@ button{
     border-radius: 3px;
     @include inner-box-shadow();
     font-family: 'Audiowide', cursive;
+    text-align: center;
 
     &:hover{
         background-color: var(--accent-color);
@@ -130,7 +176,7 @@ button{
     border-radius: 3px;
 
     &:hover{
-    background-color: var(--accent-color);
+        background-color: var(--accent-color);
     }
 }
 
@@ -150,6 +196,7 @@ button{
 .main-link{
     text-decoration: none;
 }
+
 
 .form{
     max-width: 20rem;
