Add id for player, and create player notice

--- a/front/src/assets/style.scss
+++ b/front/src/assets/style.scss
@@ -293,6 +293,11 @@ button{
     gap : 1rem;
     align-items: center;
 
+    a{
+        text-decoration: none;
+        color : white;
+    }
+
     &:hover {
         .icon-button{
             display: flex;
